fix: resolve Region ownership model concurrency issues (second audit, R2-01–R2-14)
Comprehensive concurrency fixes from the second audit report:

R2-01 — RegionState.tryBeginExecution not atomic:
  - Replaced separate phase/execState fields with a single CAS-atomic Snapshot record
  - tryAcquireExecution() now does (ACTIVE,IDLE)→(ACTIVE,RUNNING) in one CAS

R2-02 — push()/deactivate() TOCTOU race:
  - Added tryAcceptTask() that atomically increments queuedCount only when ACTIVE
  - RegionQueue.push() calls tryAcceptTask() before enqueue; pop()/steal() call releaseTask()

R2-03 / R2-04 — BlockingTask releases ExecutionToken early:
  - BlockingTaskIsolation now transfers the token (transferTo(-1)) to the blocking worker
  - Token is released only after task.execute() completes (in finally block)

R2-05 — register/unregister race:
  - Introduced RegionSlot with generation counter
  - registerRegion/unregisterRegion use putIfAbsent/replace with generation validation

R2-06 — unregister limited-yield wait:
  - Replaced yield-loop with CompletableFuture barrier
  - tryClose() completes barrier when all tokens released; unregister waits with 5s timeout

R2-09 — VirtualThreadPool not using real virtual threads:
  - Changed executor to Executors.newVirtualThreadPerTaskExecutor()

R2-10 — periodicTaskCount double-increment:
  - Removed duplicate increment in scheduleWithFixedDelay

R2-11 — cancel() not syncing TaskScheduleState:
  - scheduleAtFixedRate cancel now calls state.tryCancel()

R2-12 — forceSubmitRegion bypasses halted check:
  - Added halted.get() guard before enqueueing

R2-14 — BlockingTaskIsolation.shutdown doesn't wait:
  - Added awaitTermination(5s) before shutdownNow() fallback

Other refinements:
  - SchedulerWorker obtains PollResult with token via coordinator.poll(ownerId)
  - WorkStealingCoordinator.poll() returns PollResult(task, token, queue) for full lifecycle mgmt
  - RegionState.Snapshot is a public record with accessor-based toString()
  - BlockingT